--- a/pipelines/hpo_pipeline.yaml
+++ b/pipelines/hpo_pipeline.yaml
@@ -2,15 +2,17 @@ metadata:
   name: "cpetformer_multi_model"
   vars:
     RUNS_DIR: "{EXPERIMENT_HOME}/sota"
+    ARTIFACTS_DIR: "{EXPERIMENT_HOME}/artifacts"
+    DATASET_DIR: "{ARTIFACTS_DIR}/cpet_dataset"
     RUN_DIR: "{RUNS_DIR}/{RUN_TS}"
     BEST_DIR: "{RUNS_DIR}/best"
     rank_scan_all: "false"
 
     model_list: ""
     baseline_arch: "cpet_former"
-    subset_data: "/home/cheng/workspace/cpetx_workspace/generate_dataset/artifacts/cpet_dataset_medium.h5"
-    full_data: "/home/cheng/workspace/cpetx_workspace/generate_dataset/artifacts/cpet_dataset.h5"
-    data_file_loco: "/home/cheng/workspace/cpetx_workspace/generate_dataset/artifacts/cpet_dataset_loco"
+    subset_data: "{DATASET_DIR}/cpet_dataset_medium.h5"
+    full_data: "{DATASET_DIR}/cpet_dataset.h5"
+    data_file_loco: "{DATASET_DIR}/cpet_dataset_loco"
     hpo_trials: "100"
     hpo_jobs: "1"
     optuna_seed: "42"
